[gd_scene load_steps=28 format=2]

[ext_resource path="res://Scenes/HUD/HealthText.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/DynamicFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Sprites/HUD/health_bar.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/HUD/health_bg.png" type="Texture" id=4]
[ext_resource path="res://Scenes/HUD/HealthBar.gd" type="Script" id=5]
[ext_resource path="res://Assets/Sprites/HUD/stamina_bg.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/HUD/stamina_bar.png" type="Texture" id=7]
[ext_resource path="res://Scenes/HUD/StaminaBar.gd" type="Script" id=8]
[ext_resource path="res://Assets/Sprites/HUD/health_container_bg.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/HUD/plus.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sprites/HUD/experience_bar.png" type="Texture" id=11]
[ext_resource path="res://Assets/Sprites/HUD/experience_bg.png" type="Texture" id=12]
[ext_resource path="res://Assets/Sprites/HUD/experience_overlay.png" type="Texture" id=13]
[ext_resource path="res://Assets/Sprites/HUD/level_bg.png" type="Texture" id=14]
[ext_resource path="res://Assets/Sprites/HUD/ammo_bg.png" type="Texture" id=15]
[ext_resource path="res://Assets/Sprites/HUD/ammo_separator.png" type="Texture" id=16]
[ext_resource path="res://BaseScripts/BaseHUD.gd" type="Script" id=17]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/Fonts/Montserrat/Montserrat-SemiBold.ttf"

[sub_resource type="DynamicFont" id=2]
use_filter = true
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Assets/Fonts/Montserrat/Montserrat-SemiBold.ttf"

[sub_resource type="DynamicFont" id=4]
size = 12
use_filter = true
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Assets/Fonts/Montserrat/Montserrat-SemiBold.ttf"

[sub_resource type="DynamicFont" id=6]
size = 12
use_filter = true
font_data = SubResource( 5 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://Assets/Fonts/Montserrat/Montserrat-SemiBold.ttf"

[sub_resource type="DynamicFont" id=8]
size = 32
use_filter = true
font_data = SubResource( 7 )

[sub_resource type="DynamicFontData" id=9]
font_path = "res://Assets/Fonts/Montserrat/Montserrat-SemiBold.ttf"

[sub_resource type="DynamicFont" id=10]
size = 18
use_filter = true
font_data = SubResource( 9 )

[node name="HUD" type="Control" groups=[
"ignore_state",
]]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.891235
margin_top = 0.84552
margin_right = -0.891235
margin_bottom = 0.84552
script = ExtResource( 17 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Interact" type="Label" parent="."]
anchor_top = 1.00131
anchor_right = 1.0
anchor_bottom = 1.00131
margin_top = -48.0
custom_fonts/font = ExtResource( 2 )
text = "Press E to interact"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MainHud" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -69.0
margin_right = 369.0
margin_bottom = -20.0
custom_constants/separation = 8
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="StatusContainer" type="HBoxContainer" parent="MainHud"]
margin_right = 349.0
margin_bottom = 21.0
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthTextBg" type="TextureRect" parent="MainHud/StatusContainer"]
margin_right = 62.0
margin_bottom = 21.0
rect_min_size = Vector2( 62, 21 )
texture = ExtResource( 9 )

[node name="HealthTextWrapper" type="HBoxContainer" parent="MainHud/StatusContainer/HealthTextBg"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 5.0
margin_top = -10.5
margin_right = 54.0
margin_bottom = 10.5
custom_constants/separation = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlusContainer" type="VBoxContainer" parent="MainHud/StatusContainer/HealthTextBg/HealthTextWrapper"]
margin_right = 15.0
margin_bottom = 21.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Plus" type="TextureRect" parent="MainHud/StatusContainer/HealthTextBg/HealthTextWrapper/PlusContainer"]
margin_top = 3.0
margin_right = 15.0
margin_bottom = 18.0
texture = ExtResource( 10 )

[node name="HealthTextContainer" type="VBoxContainer" parent="MainHud/StatusContainer/HealthTextBg/HealthTextWrapper"]
margin_left = 21.0
margin_right = 49.0
margin_bottom = 21.0
script = ExtResource( 1 )

[node name="HealthText" type="Label" parent="MainHud/StatusContainer/HealthTextBg/HealthTextWrapper/HealthTextContainer"]
margin_right = 28.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 2 )
text = "100"
align = 1
valign = 1

[node name="BarContainer" type="VBoxContainer" parent="MainHud/StatusContainer"]
margin_left = 70.0
margin_right = 349.0
margin_bottom = 21.0
rect_min_size = Vector2( 279, 18 )
custom_constants/separation = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="Control" parent="MainHud/StatusContainer/BarContainer"]
margin_right = 279.0
margin_bottom = 12.0
rect_min_size = Vector2( 279, 12 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaxHealthBar" type="TextureProgress" parent="MainHud/StatusContainer/BarContainer/HealthBar"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -6.0
margin_right = 279.0
margin_bottom = 6.0
value = 100.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 3 )
tint_progress = Color( 1, 1, 1, 0.509804 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="TextureProgress" parent="MainHud/StatusContainer/BarContainer/HealthBar"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -6.0
margin_right = 279.0
margin_bottom = 6.0
value = 100.0
texture_progress = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpdateTween" type="Tween" parent="MainHud/StatusContainer/BarContainer/HealthBar"]

[node name="PulseTween" type="Tween" parent="MainHud/StatusContainer/BarContainer/HealthBar"]
repeat = true
playback/repeat = true

[node name="StaminaBar" type="Control" parent="MainHud/StatusContainer/BarContainer"]
margin_top = 15.0
margin_right = 279.0
margin_bottom = 21.0
rect_min_size = Vector2( 279, 6 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaminaBar" type="TextureProgress" parent="MainHud/StatusContainer/BarContainer/StaminaBar"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -3.0
margin_right = 279.0
margin_bottom = 3.0
rect_min_size = Vector2( 279, 6 )
max_value = 3.0
step = 0.001
value = 3.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpdateTween" type="Tween" parent="MainHud/StatusContainer/BarContainer/StaminaBar"]

[node name="Experience" type="VBoxContainer" parent="MainHud"]
margin_top = 29.0
margin_right = 349.0
margin_bottom = 49.0
custom_constants/separation = 0

[node name="ExperienceBar" type="TextureProgress" parent="MainHud/Experience"]
margin_right = 349.0
margin_bottom = 4.0
value = 35.0
texture_under = ExtResource( 12 )
texture_over = ExtResource( 13 )
texture_progress = ExtResource( 11 )

[node name="LevelBg" type="TextureRect" parent="MainHud/Experience"]
margin_top = 4.0
margin_right = 349.0
margin_bottom = 20.0
texture = ExtResource( 14 )

[node name="LvTxtContainer" type="HBoxContainer" parent="MainHud/Experience/LevelBg"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 5.0
margin_top = -8.0
margin_right = 43.0
margin_bottom = 8.0
custom_constants/separation = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LvText" type="Label" parent="MainHud/Experience/LevelBg/LvTxtContainer"]
margin_right = 17.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 4 )
text = "Lv."
align = 1
valign = 1

[node name="Level" type="Label" parent="MainHud/Experience/LevelBg/LvTxtContainer"]
margin_left = 21.0
margin_right = 36.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 6 )
text = "26"
align = 1
valign = 1

[node name="AmmoHud" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -141.76
margin_top = -70.7603
margin_right = -20.7603
margin_bottom = -20.7603
texture = ExtResource( 15 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Container" type="HBoxContainer" parent="AmmoHud"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 6.0
margin_top = -24.5
margin_right = 121.0
margin_bottom = 24.5
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentAmmo" type="VBoxContainer" parent="AmmoHud/Container"]
margin_right = 45.0
margin_bottom = 49.0
custom_constants/separation = 0

[node name="CurrentAmmo" type="Label" parent="AmmoHud/Container/CurrentAmmo"]
margin_right = 45.0
margin_bottom = 40.0
rect_min_size = Vector2( 45, 0 )
custom_fonts/font = SubResource( 8 )
text = "08"

[node name="Separator" type="VBoxContainer" parent="AmmoHud/Container"]
margin_left = 45.0
margin_right = 67.0
margin_bottom = 49.0
custom_constants/separation = 0
alignment = 1

[node name="Separator" type="TextureRect" parent="AmmoHud/Container/Separator"]
margin_top = 3.0
margin_right = 22.0
margin_bottom = 45.0
texture = ExtResource( 16 )

[node name="MagAmmo" type="VBoxContainer" parent="AmmoHud/Container"]
margin_left = 67.0
margin_right = 112.0
margin_bottom = 49.0
custom_constants/separation = 0
alignment = 2

[node name="MagAmmo" type="Label" parent="AmmoHud/Container/MagAmmo"]
margin_top = 26.0
margin_right = 45.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 10 )
text = "0289"
[connection signal="health_updated" from="." to="MainHud/StatusContainer/BarContainer/HealthBar" method="_on_HUD_health_updated"]
[connection signal="health_updated" from="." to="MainHud/StatusContainer/HealthTextBg/HealthTextWrapper/HealthTextContainer" method="_on_HUD_health_updated"]
[connection signal="max_health_updated" from="." to="MainHud/StatusContainer/BarContainer/HealthBar" method="_on_HUD_max_health_updated"]
[connection signal="max_stamina_updated" from="." to="MainHud/StatusContainer/BarContainer/StaminaBar" method="_on_HUD_max_stamina_updated"]
[connection signal="stamina_updated" from="." to="MainHud/StatusContainer/BarContainer/StaminaBar" method="_on_HUD_stamina_updated"]
